force-app/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__Explanation__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Explanation__c</fullName>
        <description>An explanation of this pricing guidance and recommendations for discounts to provide. Sales reps can view this explanation with the pricing guidance in the quote line editor.</description>
        <inlineHelpText>An explanation of this pricing guidance and recommendations for discounts to provide. Sales reps can view this explanation with the pricing guidance in the quote line editor.</inlineHelpText>
        <label>Explanation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>