force-app/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__Floor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Floor__c</fullName>
        <description>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>