force-app/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__GuidanceUsed__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GuidanceUsed__c</fullName>
        <formula>IF(SBQQ__QuoteLine__r.SBQQ__Discount__c == SBQQ__QuoteLine__r.SBQQ__Guidance__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A sales rep has accepted the target discount from this pricing guidance in the quote line editor.</inlineHelpText>
        <label>Guidance Used</label>
        <type>Checkbox</type>
    </CustomField>