force-app/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__IsViewed__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IsViewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A sales rep has viewed this pricing guidance in the quote line editor.</description>
        <label>Viewed</label>
        <type>Checkbox</type>
    </CustomField>