force-app/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <description>The quote line related to this pricing guidance.</description>
        <inlineHelpText>The quote line related to this pricing guidance.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
        <relationshipName>QuoteLinePricingGuidance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>